syntax = "proto3";
//import "Head.proto";
package Grove;

//回声测试 command = Echo
message EchoReq
{
    optional string foo  = 1;
}

message EchoRsp
{
    optional string foo  = 1;
}

//Redis回声测试 command = EchoRedis
message EchoRedisReq
{
    optional string foo  = 1;
}

message EchoRedisRsp
{
    optional string foo  = 1;
}
